--- a/shop/components/header/styles.module.scss
+++ b/shop/components/header/styles.module.scss
@@ -87,6 +87,16 @@
         span {
           color: #000;
         }
+        svg {
+          fill: #666
+        }
+      }
+      @media (max-width:670px) {
+        &:nth-of-type(2),
+        &:nth-of-type(3),
+        &:nth-of-type(4) {
+          display: none;
+        }
       }
     }
   }
