--- a/shop/styles/base.scss
+++ b/shop/styles/base.scss
@@ -305,3 +305,13 @@ $cubic-bezier: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 .adminproduct__swiper {
 }
 //-------------Swipers------
+
+//-------------Temporary------
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  background: $blue-color;
+}
