--- a/shop/components/header/styles.module.scss
+++ b/shop/components/header/styles.module.scss
@@ -32,7 +32,7 @@
     display: flex;
     gap: 15px;
 
-    li {
+    .li {
       position: relative;
       display: flex;
       align-items: center;
@@ -68,6 +68,7 @@
       span {
         font-size: 12px;
       }
+
       &::after {
         content: "";
         position: absolute;
@@ -78,25 +79,89 @@
         height: 20px;
         background: #ccc;
       }
+
       &:last-of-type {
         &::after {
           display: none;
         }
       }
+
       &:hover {
         span {
           color: #000;
         }
+
         svg {
           fill: #666
         }
       }
+
       @media (max-width:670px) {
+
         &:nth-of-type(2),
         &:nth-of-type(3),
         &:nth-of-type(4) {
           display: none;
         }
+      }
+    }
+  }
+}
+
+.menu {
+  width: 200px;
+  min-height: 200px;
+  box-shadow: $shadow-1;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: #fff;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem 0;
+
+  h4 {
+    text-align: center;
+  }
+
+  .flex {
+    display: flex !important;
+    gap: 10px !important;
+    width: 100%;
+    padding: 0 1rem;
+
+  }
+
+  ul {
+    li {
+      height: 30px;
+
+      a {
+        width: 100%;
+        padding-left: 1rem !important;
+      }
+
+      &:hover {
+        background: #eeeeeebe;
+      }
+    }
+  }
+
+  &__img {
+    width: 100px !important;
+    height: 100px !important;
+
+  }
+  .col {
+    display: flex;
+    flex-direction: column;
+    span {
+      &:last-of-type {
+        font-size: 14px;
+        color: $blue-color;
+        text-decoration: underline;
       }
     }
   }
