--- a/shop/styles/signin.module.scss
+++ b/shop/styles/signin.module.scss
@@ -26,10 +26,9 @@
       .back__svg {
         width: 50px;
         height: 50px;
-        border: 1px solid #66666657;
-        border-radius: 50%;
         display: grid;
         place-items: center;
+        margin-bottom: 24px;
         cursor: pointer;
   
         &:hover {
@@ -39,8 +38,8 @@
           }
         }
         svg {
-          width: 20px;
-          height: 20px;
+          width: 30px;
+          height: 30px;
           fill: #222;
         }
       }
@@ -52,7 +51,11 @@
           color: $blue-color;
           cursor: pointer;
           border-bottom: 1px solid $blue-color;
-          padding-bottom: 5px;
+
+          &:hover {
+            color: #000;
+          }
+
         }
       }
     }
