--- a/shop/styles/base.scss
+++ b/shop/styles/base.scss
@@ -229,7 +229,7 @@ $cubic-bezier: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     top: 0;
     width: 100%;
     height: 100% !important;
-    object-fit: cover !important;
+    object-fit: none !important;
   }
   .swiper-pagination {
     display: none;
