--- a/shop/styles/base.scss
+++ b/shop/styles/base.scss
@@ -173,11 +173,11 @@ $cubic-bezier: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     text-align: center;
     font-size: 18px;
     background: #fff;
-    /* Center slide text vertically */
+    // /* Center slide text vertically */
     display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
+    // display: -ms-flexbox;
+    // display: -webkit-flex;
+    // display: flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     -webkit-justify-content: center;
