--- a/shop/components/home/flashdeals/styles.module.scss
+++ b/shop/components/home/flashdeals/styles.module.scss
@@ -54,9 +54,9 @@
       flex-direction: column;
       align-items: center;
       width: 50px;
-      height: 65px;
+      height: 60px;
       background: $yellow-color;
-      padding: 1rem;
+      padding: rem;
       span {
         color: #333;
         font-weight: 600;
@@ -68,6 +68,7 @@
         transform: scale(2);
         fill: #333;
       }
+      
     }
   }
   &__price {
