--- a/shop/components/cart/_base.scss
+++ b/shop/components/cart/_base.scss
@@ -1,7 +1,8 @@
 .card {
   background: #fff;
   padding: 1rem;
-  // margin-top: 1rem;
+  
+  margin-top: 1rem;
 }
 .active {
   background-image: url("../../public/images/selected.png");
