--- a/shop/styles/cart.module.scss
+++ b/shop/styles/cart.module.scss
@@ -1,7 +1,7 @@
 .cart {
   padding: 1rem 0;
   background: #f5f5f5 !important;
-  //min-height: calc(100vh - 48px);
+  min-height: calc(100vh - 48px);
   &__container {
     padding: 1rem;
     display: grid;
@@ -34,8 +34,6 @@
   }
   &__products {
     grid-area: products;
-    @media (min-width: 900px) {
-      transform: translateY(-130px) !important;
-    }
+    border: 10px;
   }
 }
