cart working fine

--- a/shop/components/cart/product/styles.module.scss
+++ b/shop/components/cart/product/styles.module.scss
@@ -116,8 +116,8 @@
     }
   }
   &__shipping {
-    font-size: 1px;
-    color: $blue-color;
+    font-size: 17px;
+    color: rgb(72, 196, 72);
   }
 }
 
