cart working fine 2

--- a/shop/components/cart/_base.scss
+++ b/shop/components/cart/_base.scss
@@ -2,7 +2,7 @@
   background: #fff;
   padding: 1rem;
   
-  margin-top: 1rem;
+  margin-top: .5rem;
 }
 .active {
   background-image: url("../../public/images/selected.png");
