--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -7,7 +7,8 @@
 .ad {
   height: 54px;
   width: 100%;
-  background-image: url("../../public/images/ad.jpg");
+  background-image: url("../../public/images/ad3.svg");
+  background-color: red;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
